@@ -22,6 +22,7 @@ Version 1.1.7 to be released
 - Bug #2146: Fixed the bug in CFileHelper::getExtension, validatePath and getMimeTypeByExtension that was not finding the file extension correctly (mdomba)
 - Bug #2169: Fixed the bug that some columns are not properly quoted in MigrateCommand (Qiang)
 - Bug #2178: Fixed the bug that query builder did not recognize the AS keyword when using table alias (Qiang)
+- Bug #2183: Fixed the bug that calling CActiveDataProvider::getTotalItemCount() explicitly would make the applied scopes disappear (Qiang)
 - Bug #2188: 'join' in default scopes is now respected by STAT relations (creocoder, Sam Dark)
 - Bug #2202: Fixed the bug that when setting CJuiDatePicker.flag=true, the date picker would not appear (Qiang)
 - Bug #2214: Fixed the bug that renameColumn for MSSQL did not work correctly (Qiang)
